  04 May 2020;  <chymera@gentoo.org> julius-1.3.1.ebuild:
  games-strategy/julius: updated post-install instructions

*julius-1.3.1 (04 May 2020)

  04 May 2020;  <chymera@gentoo.org> +files/90julius.sh, +julius-1.3.1.ebuild,
  +metadata.xml:
  games-strategy/julius: new package