@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-alias julius='julius ~/.cache/julius/app'
+alias julius-game='julius-game ~/.cache/julius/app'
