@@ -1,3 +1,7 @@
+  05 May 2020;  <chymera@gentoo.org> files/90julius.sh, julius-1.3.1.ebuild:
+  games-strategy/julius: using standard cmake functions and renaming  the
+  executable in order to mitigate collision with app-accessibility/julius
+
   04 May 2020;  <chymera@gentoo.org> julius-1.3.1.ebuild:
   games-strategy/julius: updated post-install instructions
 
